exemplo de Angular com componentes e rotas

--- a/PrimeiroProjeto/src/app/rodape/rodape.component.html
+++ b/PrimeiroProjeto/src/app/rodape/rodape.component.html
@@ -1,8 +1,11 @@
-<div class="row" id="footer">
+<div class="row fixed-bottom" id="rodapeDaOra">
   <div class="col-md-12">
-
-    Posted by: Danielle de Andrade
-    Contact information: <a href="danielleacsacramento@gmail.com">
-      danielleacsacramento</a>.
+      DaniSacramento &reg; - All Rights Reserved<br/>
+      Rua dos Bobos, n. 0, Nárnia<br/>
   </div>
 </div>
+
+
+
+ 
+
