--- a/PrimeiroProjeto/src/app/titulo/titulo.component.html
+++ b/PrimeiroProjeto/src/app/titulo/titulo.component.html
@@ -1,5 +1,5 @@
-<div id="titulo" class="row">
-    <div class="cold-md-12">
-        <h1>Primeiro projeto de Angular</h1>
+<div  id="titulo" class="row sticky-top">
+    <div class="col-md-12">
+        <h3>Bem vindo ao nosso primeiro sistema Angular</h3>
     </div>
 </div>
