--- a/PrimeiroProjeto/src/app/app.component.html
+++ b/PrimeiroProjeto/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <app-titulo></app-titulo>
-  <app-corpo></app-corpo>
-  <app-rodape></app-rodape>
-  
+<app-titulo></app-titulo>
+<app-corpo></app-corpo>
+<router-outlet></router-outlet>
+<app-rodape></app-rodape>
