--- a/PrimeiroProjeto/src/app/rodape/rodape.component.css
+++ b/PrimeiroProjeto/src/app/rodape/rodape.component.css
@@ -1,18 +1,12 @@
-#footer{
+#rodapeDaOra{
     font-size: x-small;
-    background-color: lightblue;
-    color: black;
+    background-color: rgb(13, 14, 12);
+    color: white;
     padding-left: 5%;
-    width: 100%;
+    width : 100%;
     margin-right: 0;
-
-
-    border-radius: 20px;
-    margin-left: 20%;
-    margin-right: 30%;
-    padding-top: 30px;
-    padding-bottom: 0px;
-
-    text-align: center;
-    text-shadow: 2px 2px 5px black;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-left: 0px; 
+    text-align: center; 
 }
