--- a/PrimeiroProjeto/src/app/titulo/titulo.component.css
+++ b/PrimeiroProjeto/src/app/titulo/titulo.component.css
@@ -1,11 +1,7 @@
 #titulo{
-    background-color: lightblue;
-    border-radius: 0px;
-    margin-left: 0%;
-    margin-right: 0%;
-    padding-top: 0px;
-    padding-bottom: 0px;
-
+    font-family: "Segoe UI" Arial, sans-serif;
+    font-weight:400;
+    margin:10px 0;
     text-align: center;
-    text-shadow: 2px 2px 5px black;
+   
 }
